--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,14 +4,13 @@ Save Files From DB 2.3.2 are compatible with DB 2.3.3
 -Highly improved save file generation and handling
 (Now allows for upgrading save files from a previous format)
 -Guards now have Cell Phones
--Partially implemented The Swift Shadow System by sswift
 -Intro sequence tweaks
 -SCP-173 document and intro SCP-173 document are now separate
 -Subtitles can now have up to 8 different languages
 -Updated Radio Functionality
 -Updated rooms: start
 -Added a Rotating Alarm Light system
--Added Meme Mode (cringe)
+-Added Meme Mode
 -Misc changes
 -Misc Bug Fixes
 ------------------------------------------------------------
