--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,8 @@ Save Files From DB 2.3.2 are compatible with DB 2.3.3
 -Updated rooms: start
 -Added a Rotating Alarm Light system
 -Added Meme Mode
+-RMesh viewer can now load map props
+-Gate A has been tweaked slightly
 -Misc changes
 -Misc Bug Fixes
 ------------------------------------------------------------
