tools are now in dedicated folder
also all rmesh tools are now available via the launcher

--- a/Data/lang/English/launcher.ini
+++ b/Data/lang/English/launcher.ini
@@ -1,4 +1,4 @@
-;MENU LANG INI FORMAT:
+;STANDARD LANGUAGE INI FORMAT:
 
 ;[STRING NAME]
 ;text = Text, line 1.
@@ -28,7 +28,7 @@ text = Borderless
 text2 = windowed mode
 
 [str_16bit]
-text = 16 Bit
+text = 16 bit
 
 [str_enable_launcher]
 text = Use launcher
@@ -60,8 +60,20 @@ text = DGVOODOO CPL
 [btn_map_builder]
 text = MAP BUILDER
 
+[btn_rmesh_tools]
+text = RMESH TOOLS
+
 [btn_rmesh_viewer]
-text = RMESH VIEW
+text = ROOM VIEWER
+
+[btn_rmesh_convert]
+text = B3D 2 RMESH
+
+[btn_rmesh_lightmap]
+text = LM TOOLS
+
+[btn_back]
+text = BACK
 
 [btn_changelog]
 text = CHANGELOG
