--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,7 @@ Save Files From DB 2.3.2 are compatible with DB 2.3.3
 -Intro sequence tweaks
 -Loading screens now support animated graphics
 -SCP-173 document and intro SCP-173 document are now separate
--Subtitles can now have up to 8 different languages
+-Greatly improved subtitles system (now Language System)
 -Updated Radio Functionality
 -Updated rooms: start
 -Added a Rotating Alarm Light system
