more work on main menu completed
also difficulty strings are lang adjusted

--- a/Data/lang/English/meme/menu.ini
+++ b/Data/lang/English/meme/menu.ini
@@ -12,31 +12,31 @@
 ;-----------------------
 
 [str_easy]
-text = Easy
+text = coward
 
 [str_med]
-text = Normal
+text = scared
 
 [str_hard]
-text = Hard
+text = manly
 
 [str_newgame]
-text = NEW GAME
+text = :)
 
 [str_loadmap]
 text = LOAD MAP
 
 [str_loadgame]
-text = LOAD GAME
+text = COWARD
 
 [str_options]
-text = OPTIONS
+text = OOPCHEENS
 
 [str_changelog]
 text = CHANGELOG
 
 [str_quit]
-text = QUIT
+text = BYE BYE SUCKA
 
 [str_repeat]
 text = Repeat
@@ -106,27 +106,27 @@ text = HIGH
 text = LOW
 
 [str_diff_easy]
-text = Safe
+text = Keter
 
 [str_diff_med]
-text = Euclid
+text = Keter
 
 [str_diff_hard]
 text = Keter
 
 [str_diff_custom]
-text = Esoteric
+text = Not Keter
 
 [str_diff_easy_desc]
-text = The game can be saved any time. However, as in the case of SCP Objects, a Safe classification does not mean that handling it does not pose a threat.
+text = coward
 
 [str_diff_med_desc]
-text = In Euclid difficulty, saving is only allowed at specific locations marked by lit up computer screens.
-text2 = Euclid-class objects are inherently unpredictable, so that reliable containment is not always possible.
+text = coward...
+text2 = YEAH YOU HEARD ME
 
 [str_diff_hard_desc]
-text = Keter-class objects are considered the most dangerous ones in Foundation containment.
-text2 = The same can be said for this difficulty level: the SCPs are more aggressive, and you have only one life - when you die, the game is over.
+text = good,
+text2 = looks like someone choose a good difficulty option
 
 ;-----------------------
 ;MENU BUTTONS
@@ -157,34 +157,34 @@ text = Yes
 text = No
 
 [btn_newgame]
-text = NEW GAME
+text = SUFFERING
 
 [btn_loadgame]
-text = LOAD GAME
+text = LOAD SHIT
 
 [btn_options]
-text = OPTIONS
+text = NOTHING
 
 [btn_graphics]
-text = GRAPHICS
+text = GRAPCHICS
 
 [btn_audio]
-text = AUDIO
+text = AULDIO
 
 [btn_controls]
-text = CONTROLS
+text = CONTRAILS
 
 [btn_advanced]
-text = ADVANCED
+text = ASSVANCED
 
 [btn_mememode]
-text = MEME MODE
+text = FUNNI
 
 [btn_changelog]
 text = CHANGELOG
 
 [btn_quit]
-text = QUIT
+text = END SUFFERING
 
 [btn_back]
 text = BACK
