--- a/Data/lang/English/menu.ini
+++ b/Data/lang/English/menu.ini
@@ -311,7 +311,7 @@ text = Meme Mode (will restart game):
 text = Always override Intro Videos:
 
 [opt_memeloading]
-text = Always override Loading Screens:
+text = Always override Loadin:
 
 ;-----------------------
 ;CONTROLS ENTRIES
