menu tooltips now utilize language system

--- a/Data/lang/English/menu.ini
+++ b/Data/lang/English/menu.ini
@@ -305,13 +305,13 @@ text = Enable 3D Menu:
 text = Use launcher:
 
 [opt_mememode]
-text = Meme Mode (will restart game):
+text = Meme Mode™:
 
 [opt_memeintros]
-text = Always override Intro Videos:
+text = Always override Videos:
 
 [opt_memeloading]
-text = Always override Loadin:
+text = Always override Loading:
 
 ;-----------------------
 ;CONTROLS ENTRIES
