import/export maps/saves
fixes for pre-existing maps or saves with the same name is coming in the next commit

--- a/Data/lang/English/menu.ini
+++ b/Data/lang/English/menu.ini
@@ -72,16 +72,25 @@ text = Aggressive NPCs
 text = Other difficulty factors: 
 
 [str_page]
-text = Page 
+text = Page
 
 [str_nosaves]
 text = No saved games.
 
 [str_savedin]
-text = Saved in: 
+text = Saved in:
 
 [str_savefmt]
-text = Save fmt: 
+text = Save fmt:
+
+[str_savefile]
+text = Save file
+
+[str_importsav]
+text = Import Save data...
+
+[str_exportsav]
+text = Export Save data...
 
 [str_deleteconf]
 text = Are you sure you want to delete this save (this cannot be undone)?
@@ -96,6 +105,15 @@ text2 = successfully loaded
 [str_nomaps]
 text = No available maps. You can use the map builder to create some.
 
+[str_mapfile]
+text = Custom map data
+
+[str_importmap]
+text = Import custom map data...
+
+[str_exportmap]
+text = Export custom map data...
+
 [str_fps]
 text = FPS
 
@@ -105,26 +123,26 @@ text = HIGH
 [str_low]
 text = LOW
 
-[str_diff_easy]
+[str_diff_0]
 text = Safe
 
-[str_diff_med]
+[str_diff_1]
 text = Euclid
 
-[str_diff_hard]
+[str_diff_2]
 text = Keter
 
-[str_diff_custom]
+[str_diff_3]
 text = Esoteric
 
-[str_diff_easy_desc]
+[str_diff_0_desc]
 text = The game can be saved any time. However, as in the case of SCP Objects, a Safe classification does not mean that handling it does not pose a threat.
 
-[str_diff_med_desc]
+[str_diff_1_desc]
 text = In Euclid difficulty, saving is only allowed at specific locations marked by lit up computer screens.
 text2 = Euclid-class objects are inherently unpredictable, so that reliable containment is not always possible.
 
-[str_diff_hard_desc]
+[str_diff_2_desc]
 text = Keter-class objects are considered the most dangerous ones in Foundation containment.
 text2 = The same can be said for this difficulty level: the SCPs are more aggressive, and you have only one life - when you die, the game is over.
 
@@ -200,6 +218,15 @@ text = Scan for User tracks
 
 [btn_refreshlang]
 text = Refresh Language
+
+[btn_importsav]
+text = Import save
+
+[btn_importmap]
+text = Import map
+
+[btn_export]
+text = Export
 
 ;-----------------------
 ;OPTIONS ENTRIES
